--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.8.9",
+    "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "sharp": "^0.28.3",
