--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
@@ -22,6 +23,7 @@
     "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "sharp": "^0.28.3",
     "uuid": "^8.3.0"
   },
