--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BACKEND_URL=http://localhost:9999
-DB_URI=mongodb+srv://shopzoneadmin:eskiparol@shopzonecluster.x7rarva.mongodb.net/shopzone?retryWrites=true&w=majority
+DB_URI=@
