--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
-  },
-  "engines": {
-    "node": "v16.13.0"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -18,15 +16,19 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
+    "express-async-errors": "^3.1.1",
     "express-session": "^1.17.0",
     "fs": "^0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.8.9",
     "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.2",
     "path": "^0.12.7",
     "sharp": "^0.28.3",
     "uuid": "^8.3.0"
